# scripting

./: Cargo.toml  README.md
scripts/: ecs_example.lua
src/: camera.rs  colors.rs  delta_time.rs  device_dim.rs  draw.rs  ecs.rs  graphics.rs  input.rs  linear.rs  main.rs  modding.rs  physics.rs  scriptable.rs  shape.rs  view_port.rs
src/shaders/: basic_150.glslf  basic_150.glslv
